--- a/build.gradle
+++ b/build.gradle
@@ -263,6 +263,8 @@ dependencies {
     pluginLibsRuntime 'org.codehaus.janino:janino:2.5.15'
     pluginLibsRuntime 'org.jboss.narayana.tomcat:tomcat-jta:5.6.4.Final'
     
+	pluginLibsRuntime 'org.apache.activemq:artemis-jms-client:2.3.0'
+	pluginLibsRuntime 'net.sf.jopt-simple:jopt-simple:5.0.2'
     pluginLibsRuntime 'org.javassist:javassist:' + javassistVersion
     
     pluginLibsRuntime 'javax.websocket:javax.websocket-api:1.1'
